# Geo-Yield-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yml
.github/workflows/: build.yml  check-branch-name.yml  deploy.yml  integrate.yml  integration.yml
apps/api/: README.md  requirements.txt
apps/api/app/: catastro.py  db.py  main.py
backend/api/: api.py  main.py
backend/api/routers/: business.py
backend/api/schemas/: business.py
backend/ia/: agent.py
database/: schema.sql  seed_data.sql
deployment/: Dockerfile  docker-compose.yml  main.py
deployment/app/: api.py  main.py
frontend/src/: App.vue
frontend/src/assets/styles/: main.css
frontend/src/components/: ChatInterface.vue  MapComponent.vue
infra/db/init/: 001_schema.sql  002_opendata_bcn.sql  003_osm_pois.sql
ingestion/: Dockerfile  common.py  download_mitma_data.py  download_opendata_bcn.py  download_osm_pois.py  ingest_census.py  load_mitma_data.py  load_opendata_bcn.py  load_osm_pois.py  requirements.txt
notebooks/: 01_eda_mobility_mitma.ipynb  02_eda_census_bcn.ipynb  03_eda_income_ine.ipynb  04_spatial_integration.ipynb
scripts/: load_commercial_census.py
tests/model_tests/: test_scoring.py
tests/unit_tests/: test_api.py  test_health.py
