[project]
name = "pj-geo-yield-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "geoalchemy2>=0.19.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
]
